--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,6 +3,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .nav-blocks {
@@ -86,7 +88,8 @@
   .app {
     height: 100vh;
     max-height: 100vh;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .nav {
